data/derived/sp14/progs/unify/prog2424.ml.out
Characters 91-99:
  wwhile (helper b,b);;
          ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
